# CleanDreams

./: .gitignore  CMakeLists.txt  Makefile  README.md  Raport de analiza - CleanDreams.docx  cleandreams_washing_machine.cpp  custom_programs.txt  examples.postman_collection.json  specification.json  specification_mqtt.json
includes/: MqttSubscriber.cpp  MqttSubscriber.h  ServerEndpoint.cpp  ServerEndpoint.h  WashingMachine.cpp  WashingMachine.h  WashingProgram.cpp  WashingProgram.h
test_jsons/: clothes.json  custom_program.json  environment.json  program.json  settings.json
